# ai-fisherman

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  deploy.sh  docker-compose.yml
articles/: building-ai-agents.html
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: admin.py  articles.py  auth.py  chat.py  search.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  article.py  user.py
backend/app/schemas/: article.py  auth.py  chat.py  search.py
backend/app/services/rag/: chat_service.py  embeddings.py  indexer.py  vector_store.py
backend/content/: about.html  courses.html
nginx/: nginx.conf
specs/frontend_v2/: design.md  requirements.md  tasks.md
vue-app/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
vue-app/src/: App.vue  main.ts
vue-app/src/api/: index.ts
vue-app/src/assets/styles/: main.css  tailwind.css
vue-app/src/components/: AiChat.vue  ArticleCard.vue  Footer.vue  Navbar.vue  ParticleBackground.vue  ProjectCard.vue  index.ts
vue-app/src/components/ui/: AnimatedCounter.vue  index.ts
vue-app/src/data/: articles.ts  courses.ts  index.ts  projects.ts
vue-app/src/locales/: en.ts  index.ts  zh.ts
vue-app/src/router/: index.ts
vue-app/src/stores/: articles.ts  auth.ts  chat.ts  index.ts  theme.ts
vue-app/src/types/: index.ts
vue-app/src/views/: About.vue  ArticleDetail.vue  Articles.vue  Courses.vue  Home.vue  NotFound.vue  Projects.vue
(+15 files in other folders)
